--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tabler/icons-react": "^3.31.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.509.0",
-    "motion": "^12.10.5",
+    "motion": "^12.11.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
