--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.509.0",
     "motion": "^12.11.0",
     "next": "^15.3.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
