--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.509.0",
+    "mongoose": "^8.16.0",
     "motion": "^12.11.0",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
@@ -43,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
